@@ -6,6 +6,8 @@
 
 Darbkot 7f2: April 05, 2004
 
+	- Fixed permbans not loading correctly.
+
 	- Fixed a possible crash scenario in do_random_stuff().
 
 	- You can now use !GOOGLE for google searches.
